updates, set up initial web page

--- a/templates/home.html
+++ b/templates/home.html
@@ -36,14 +36,15 @@
             <button id="delete">Delete</button>
             <button id="reset">Reset</button>
         </div>
-        <div class="people">
+        <div class="movies">
             <table>
-                <caption>People</caption>
+                <caption>Movies</caption>
                 <thead>
                     <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Update Time</th>
+                        <th>Movie Name</th>
+                        <th>Movie Genre</th>
+                        <th>Released Date</th>
+                        <th>Runtime</th>
                     </tr>
                 </thead>
                 <tbody>
